--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 flask~=3.1.2
-pymysql~=1.1.2
+flask_login~=0.6.3
+flask_sqlalchemy~=3.1.1
+flask_apscheduler~=1.13.1
 translate~=3.6.1
 sqlalchemy~=2.0.43
 pandas~=2.3.2
